
    MAPREDUCE-5405. Job recovery can fail if task log directory symlink from
    prior run still exists. (cnauroth)

    MAPREDUCE-5288. ResourceEstimator#getEstimatedTotalMapOutputSize suffers 
    from divide by zero issues. (kkambatl via tucu)

    HADOOP-9507. LocalFileSystem rename() is broken in some cases when
    destination exists. (cnauroth)

Release 1.2.1 - 2013.07.06

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-4880. Print the image and edits file loaded by the namenode in the
    logs. (Arpit Agarwal via suresh)

  BUG FIXES

    MAPREDUCE-5256. CombineInputFormat isn't thread safe affecting HiveServer.
    (Vinod Kumar Vavilapalli, via mattf)

    HADOOP-9504 MetricsDynamicMBeanBase has concurrency issues in createMBeanInfo. 
    (Liang Xie and Jason Lowe, via mattf)

    MAPREDUCE-5206. Ensure that a job doesn't get added to RetiredJobs
    multiple times in JobTracker. (acmurthy)

    MAPREDUCE-5148. Fix MAPREDUCE-4970 to ensure task-log4j.properties is
    available for previous installs by putting it in hadoop-core.jar.
    (acmurthy)

    MAPREDUCE-3859. Fix CapacityScheduler to correctly compute runtime queue
    limits for high-ram jobs. (Sergey Tryuber via acmurthy)

    HDFS-4581. DataNode.checkDiskError should not be called on network errors.
    (Rohit Kochar via kihwal)

    HDFS-4699. Additional conditions for avoiding unnecessary 
    DataNode.checkDiskError calls. (Chris Nauroth via kihwal)

    HDFS-4261. Fix bugs in Balaner causing infinite loop and
    TestBalancerWithNodeGroup timing out.  (Junping Du via szetszwo)

    MAPREDUCE-5260. Fix JvmManager to deal better with corner-cases in
    shutting down. (zhaoyunjiong via acmurthy) 

    MAPREDUCE-5318. Escape ampersand in JSPUtil. (Bohou Li via acmurthy)

    HADOOP-9665. Fixed BlockDecompressorStream#decompress to return -1 rather
    than throw EOF at end of file. (Zhijie Shen via acmurthy)
