@@ -136,32 +136,40 @@ class QueueMetrics implements MetricsSource {
     registry.snapshot(builder.addRecord(registry.name()), all);
   }
 
-  public void launchMap(TaskAttemptID taskAttemptID) {
+  public void launchMap(TaskAttemptID taskAttemptID, boolean speculative) {
     mapsLaunched.incr();
-    decWaitingMaps(taskAttemptID.getJobID(), 1);
+    if (!speculative) {
+      decWaitingMaps(taskAttemptID.getJobID(), 1);
+    }
   }
 
   public void completeMap(TaskAttemptID taskAttemptID) {
     mapsCompleted.incr();
   }
 
-  public void failedMap(TaskAttemptID taskAttemptID) {
+  public void failedMap(TaskAttemptID taskAttemptID, boolean incWaiting) {
     mapsFailed.incr();
-    addWaitingMaps(taskAttemptID.getJobID(), 1);
+    if (incWaiting) {
+      addWaitingMaps(taskAttemptID.getJobID(), 1);
+    }
   }
 
-  public void launchReduce(TaskAttemptID taskAttemptID) {
+  public void launchReduce(TaskAttemptID taskAttemptID, boolean speculative) {
     redsLaunched.incr();
-    decWaitingReduces(taskAttemptID.getJobID(), 1);
+    if (!speculative) {
+      decWaitingReduces(taskAttemptID.getJobID(), 1);
+    }
   }
 
   public void completeReduce(TaskAttemptID taskAttemptID) {
     redsCompleted.incr();
   }
 
-  public void failedReduce(TaskAttemptID taskAttemptID) {
+  public void failedReduce(TaskAttemptID taskAttemptID, boolean incWaiting) {
     redsFailed.incr();
-    addWaitingReduces(taskAttemptID.getJobID(), 1);
+    if (incWaiting) {
+      addWaitingReduces(taskAttemptID.getJobID(), 1);
+    }
   }
 
   public void submitJob(JobConf conf, JobID id) {
